# bus_generator

./: .gitignore  AGENTS.md  Makefile  README.md  bus_generator.bat  bus_generator.py  bus_generator.sh  pyproject.toml  requirements.txt  test.py
doc/: .gitignore  Makefile  axi4l_int.drawio  axi4l_int.v  axi4l_int2.v  int_if_digram.drawio  tb_axi4l_int.sv  tb_axi4l_int.tcl  tb_axi4l_int.v  test_axi4l_int.py
src/bus_generator/: __init__.py  bus_generator.py
src/bus_generator/templates/: tb_{{axi4l}}_regs.v.jinja2
templates/: axi4l.v.jinja2  tb_axi4l.v.jinja2  tb_{{axi4l}}_regs.v.jinja2  {{avalon_mm}}_regs.v.jinja2  {{axi4l}}_regs.v.jinja2  {{c_header}}.h.jinja2
test/: simple.rdl
tests/: axi_gpio.rdl  cocotb_stress.py  gpio.rdl  lowphy.rdl  pps_syncer.rdl  ram.rdl  simple.rdl  test_bus_generator.py  test_generation.py  test_simulation.py  test_stress.py  test_unit.py
util/: constr_ooc.xdc
