[project]
name = "bus-generator"
version = "0.1.0"
description = "Generate a Verilog AXI slave CSR block from SystemRDL"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "jinja2>=3.1.6",
    "systemrdl-compiler>=1.32.1",
]

[project.scripts]
bus-generator = "bus_generator:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "cocotb>=2.0.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "sim: RTL simulation tests (slow, needs iverilog)",
]
